--- a/src/index.css
+++ b/src/index.css
@@ -12,17 +12,10 @@ code {
     monospace;
 }
 
-.nav{
-  padding: 30px 0 30px 30px;
-}
-
-.nav-item{
-  margin-right: 20px;
-  color: royalblue;
-  text-decoration: underline;
-  cursor: pointer;
-}
-
-.inf{
+.container{
+  margin-top: 30px;
   margin-left: 30px;
+}
+.indent{
+  margin-bottom: 30px;
 }
