--- a/src/index.css
+++ b/src/index.css
@@ -13,18 +13,22 @@ code {
 }
 
 .container{
-  margin-top: 30px;
-  margin-left: 30px;
-}
-.indent{
-  /* margin-left: 200px; */
-  position: relative;
-  top: 0;
-  left: 200px;
+  max-width: 800px;
+  margin: 0 auto;
 }
 
-.square{
-  width: 100px;
-  height: 100px;
-  background: royalblue;
+.links{
+  text-align: center;
+  padding: 40px 0;
+}
+
+.link{
+  text-decoration: none;
+  color: black;
+  font-size: 26px;
+  text-transform: uppercase;
+}
+
+.link:not(:last-child){
+  margin-right: 30px;
 }
